--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+Titre principal : Bienvenue sur TolkienCritics
+
+Paragraphe d’introduction :
+Bienvenue sur TolkienCritics, le site des passionnés de l’univers de J.R.R. Tolkien !
+Ici, tu peux découvrir, noter et partager tes avis sur les livres qui ont fait la légende de la Terre du Milieu. Que tu sois fan du Seigneur des Anneaux, du Silmarillion ou des Contes et Légendes inachevés, tu es au bon endroit.
+
+Bloc “À propos” :
+TolkienCritics est une communauté créée par et pour les amoureux de la fantasy.
+Notre objectif : rassembler les lecteurs, partager nos coups de cœur, et donner envie à chacun de se replonger dans l’œuvre de Tolkien.
+Chacun peut créer un compte, laisser des notes, écrire des critiques ou simplement explorer les livres.
+
+Bloc “Comment ça marche” :
+1️⃣ Parcours la bibliothèque et découvre des fiches détaillées pour chaque ouvrage.
+2️⃣ Note les livres que tu as lus, et lis les avis de la communauté.
+3️⃣ Discute et partage tes recommandations avec d’autres passionnés.
+
+Mise en avant communauté :
+📚 Déjà 1 257 critiques partagées
+⭐ Note moyenne de la saga : 4,7/5
+
 
