--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,26 @@
+✉️ Page 3 — Contact
+Titre principal : Contacte l’équipe TolkienCritics
 
+Introduction :
+Une question ? Une suggestion de livre à ajouter ? Un bug à signaler ? Nous sommes à ton écoute !
+
+Moyens de contact :
+📧 Email : contact@tolkiencritics.org
+📌 Formulaire : Remplis notre formulaire pour nous écrire directement (nom, email, sujet, message).
+
+Bloc “Réseaux sociaux” :
+Suivre TolkienCritics, c’est rejoindre une communauté active :
+
+🔗 Facebook : TolkienCritics Officiel
+
+🐦 Twitter : @TolkienCritics
+
+📚 Goodreads : Notre club de lecture dédié
+
+Bloc “Infos pratiques” :
+Nous répondons généralement sous 48h.
+Pour signaler un abus ou une critique inappropriée, merci de préciser le titre du livre et le pseudo concerné.
+
+Mot de la fin :
+Merci de faire vivre TolkienCritics et de partager ta passion pour l’œuvre de Tolkien !
+🧙‍♂️✨📚
